Fixed Image Alignment

--- a/Homepage.css
+++ b/Homepage.css
@@ -115,7 +115,7 @@ h1,h2,h3,h4,h5,h6
 {
     color: white;
     font-family: "Courier New";
-    text-align: center;
+
 }
 
 
